# Fred

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  setup.py
Fred/: __init__.py  hd_fs.py  median.py  stabbing.py
experiments/: dtw_mislead_i.py  dtw_mislead_m.py  dtw_normal.py  dtw_old.py  dtw_zigzag.py
include/: .gitignore  bounding.hpp  clustering.hpp  config.hpp  coreset.hpp  curve.hpp  dynamic_time_warping.hpp  frechet.hpp  graph.hpp  grid.hpp  interval.hpp  jl_transform.hpp  point.hpp  random.hpp  simplification.hpp  types.hpp
py/: .gitignore  setup.py  test.py
py/Fred/: __init__.py  median.py
py/test/: test.py
src/: .gitignore  bounding.cpp  clustering.cpp  compute_distance_wrapper.cpp  config.cpp  curve.cpp  dynamic_time_warping.cpp  frechet.cpp  fred_python_wrapper.cpp  interval.cpp  jl_transform.cpp  point.cpp  simplification.cpp
test/: test.py
